horizontal scrolling fix

--- a/src/components/Banner/Banner.module.css
+++ b/src/components/Banner/Banner.module.css
@@ -154,7 +154,7 @@
 
   .bottomblur{
     top: 200px;
-    right: -25vw;
+    right: 10px;
   }
   
 }
