--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -76,7 +76,8 @@
 }
 
 
-@media screen and (max-width: 890px) {
+
+@media screen and (max-width: 1000px) {
 
 
   .navbar {
